--- a/data/minify/package.json
+++ b/data/minify/package.json
@@ -1,22 +1,23 @@
 {
   "name": "emulatorjs-minify",
-  "version": "1.0.1",
-  "description": "Minify the EmulatorJS javascript files",
+  "version": "1.0.0",
+  "description": "Minify the emulatorjs javascript files",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EmulatorJS/EmulatorJS.git"
+    "url": "git+https://github.com/ethanaobrien/emulatorjs.git"
   },
   "author": "Ethan O'Brien",
   "bugs": {
-    "url": "https://github.com/EmulatorJS/EmulatorJS/issues"
+    "url": "https://github.com/ethanaobrien/emulatorjs/issues"
   },
-  "homepage": "https://github.com/EmulatorJS/EmulatorJS#readme",
+  "homepage": "https://github.com/ethanaobrien/emulatorjs#readme",
   "dependencies": {
-    "uglify-js": "^3.17.4",
+    "uglify-js": "^3.15.3",
     "uglifycss": "0.0.29"
   }
 }
